changed html location

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./assets/favicon-32x32.png"
+      href="dist/assets/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="output.css" />
+    <link rel="stylesheet" href="dist/output.css" />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
@@ -25,7 +25,7 @@
     >
       <img
         class="inline-block rounded-lg"
-        src="./assets/image-qr-code.png"
+        src="dist/assets/image-qr-code.png"
         alt=""
       />
       <h2 class="mt-6 text-[1.35rem]/7 font-bold text-dark-blue">
