--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       type="image/png"
@@ -14,7 +20,9 @@
 
     <title>Frontend Mentor | QR code component</title>
   </head>
-  <body class="min-h-screen flex justify-center items-center p-4 bg-light-gray">
+  <body
+    class="min-h-screen font-Outfit flex justify-center items-center p-4 bg-light-gray"
+  >
     <header>
       <h1 class="sr-only">
         This is a componenet from a Frontend Mentor challenge
